@@ -139,15 +139,6 @@ empathy-ui-utils
 @Returns: 
 
 
-<!-- ##### FUNCTION empathy_pixbuf_avatar_from_contact ##### -->
-<para>
-
-</para>
-
-@contact: 
-@Returns: 
-
-
 <!-- ##### FUNCTION empathy_pixbuf_avatar_from_contact_scaled ##### -->
 <para>
 
